# ai-native-book

./: .gitignore  .vercelignore  CANONICAL_PAGE_INVENTORY.md  CLEANUP_COMPLETED_REPORT.md  CNAME  CONTENT_COMPLETION_MAP.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FLOATING_CHAT_IMPLEMENTATION.md  GEMINI.md  PROJECT_COMPREHENSIVE_AUDIT.md  README.md  REPORT_AGENT_AUDIT.md  SETUP.md  SIDEBAR_MIGRATION.md  SPEC-1-COMPLETION-CERTIFICATE.md  SPEC-4-COMPLETION-CERTIFICATE.md  TROUBLESHOOTING.md  corrected_calibration_code.py  corrected_sensor_examples.py  corrected_sensor_launch.py  docs-merge-plan.json  generate_sidebar.py  generated_sidebars.ts  sidebars.ts  vercel.json
RAG-backend/: .coverage  .dockerignore  .env.example  .gitignore  API_KEY_ROTATION_REQUIRED.txt  AUDIT_FINAL_REPORT.md  CHATKIT_ANALYTICS_GUIDE.md  DOCUMENTATION_INDEXING.md  Dockerfile  HTTP_429_FIX_SUMMARY.md  LLM_PROVIDER_AUDIT_REPORT.md  LLM_PROVIDER_FIX_SUMMARY.md  OPENROUTER_USAGE.md  QUICK_START_INDEXING.md  README.md  RELIABILITY_IMPLEMENTATION_SUMMARY.md  SECURITY_GUIDE.md  app.py  chunks_output.json  pyproject.toml  pytest.ini  rag_status_report.py  requirements.txt  simple_data_integrity_check.py  test_chatkit_analytics.py  test_qdrant_connection.py  test_rate_limit_config.py  test_rate_limiting_fix.py  test_reliability_features.py  test_simple.py  validate_data_integrity.py
RAG-backend/app/: config.py  main.py
RAG-backend/app/api/: embed.py  (+5 more)
RAG-backend/scripts/: index_documentation.py  test_chunking.py
RAG-backend/specs/: agent.system.md
RAG-backend/tests/: TEST_PYRAMID_PLAN.md  conftest.py
(+493 files in other folders)
