[project]
name = "rag-backend"
version = "0.1.0"
description = "RAG Backend for AI-Native Development Book - FastAPI + Cohere + Qdrant + OpenAI Agents"
readme = "README.md"
authors = [
    { name = "AsmaIqbal01", email = "azeecreations1@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Vector Database & Embeddings
    "qdrant-client>=1.12.0",
    "cohere>=5.11.0",

    # LLM & Agent Framework
    "openai>=1.54.0",
    "openai-agents>=0.0.2",  # OpenAI Agents SDK

    # Database
    "asyncpg>=0.30.0",  # Neon Postgres async driver
    "sqlalchemy>=2.0.36",

    # Web Scraping & Processing
    "beautifulsoup4>=4.12.3",
    "httpx>=0.28.0",
    "lxml>=5.3.0",

    # Text Processing
    "tiktoken>=0.8.0",  # Token counting for chunking

    # Utilities
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",  # Structured logging
    "tenacity>=9.0.0",  # Retry logic
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",  # For TestClient
]

[project.scripts]
rag-backend = "rag_backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
